--- a/register.html
+++ b/register.html
@@ -36,7 +36,7 @@
                         <label for="fullname">Full Name</label>
                         <div class="input-wrapper">
                             <i class="fas fa-id-card"></i>
-                            <input type="text" id="fullname" placeholder="John Doe" required>
+                            <input type="text" id="fullname" placeholder="Athira" required>
                         </div>
                     </div>
                     <div class="form-group">
