--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduStream | Results</title>
+    <title>Results</title>
     <link rel="stylesheet" href="css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap"
@@ -37,7 +37,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <!-- Dynamic -->
+
                             </tbody>
                         </table>
                     </div>
@@ -46,7 +46,6 @@
         </div>
     </div>
 
-    <!-- Modal -->
     <div class="modal" id="results-modal">
         <div class="modal-content">
             <i class="fas fa-times modal-close" onclick="toggleModal(false)"></i>
