--- a/my-results.html
+++ b/my-results.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduStream | My Results</title>
+    <title>My Results</title>
     <link rel="stylesheet" href="css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap"
@@ -39,7 +39,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <!-- Dynamic -->
+                              
                             </tbody>
                         </table>
                     </div>
