--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduStream | Register</title>
+    <title>Register</title>
     <link rel="stylesheet" href="css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap"
@@ -36,7 +36,7 @@
                         <label for="fullname">Full Name</label>
                         <div class="input-wrapper">
                             <i class="fas fa-id-card"></i>
-                            <input type="text" id="fullname" placeholder="John Doe" required>
+                            <input type="text" id="fullname" placeholder="Athira" required>
                         </div>
                     </div>
                     <div class="form-group">
